# NDK-Camera-Example

./: settings.gradle
Notes/: NDK.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/euphoria/psycho/knife/: MainActivity.java
app/src/main/jni/: CMakeLists.txt  CameraUtils.cpp  CameraUtils.h  CameraWrapper.cpp  CameraWrapper.h  cameraEngine.cpp  cameraEngine.h  cameraManager.cpp  cameraManager.h  camera_manager.cpp  imageReader.cpp  imageReader.h  image_reader.cpp  jni_connect.cpp  native_debug.h  nativelib.cpp  utils.h
app/src/main/res/layout/: main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
